kubernetes/policy/kyverno/policies-enforce/00-disallow-privilege-escalation.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: homelab-disallow-privilege-escalation
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  homelab-kyverno: enabled
      validate:
        message: "Containers must set allowPrivilegeEscalation=false."
        pattern:
          spec:
            containers:
              - name: "*"
                securityContext:
                  allowPrivilegeEscalation: false
            =(initContainers):
              - name: "*"
                securityContext:
                  allowPrivilegeEscalation: false
